--- a/conf/vm/MapperTemplate.vm
+++ b/conf/vm/MapperTemplate.vm
@@ -17,4 +17,12 @@
        <include refid="Base_Column_List" />
 	   FROM ${tbName}
     </select>
+    
+    <insert id="insert">
+		INSERT INTO
+		${tbName} (#foreach($field in $fields)#if($!{foreach.index}>0),#end${field.getColumName()}#end)
+		VALUES
+		(#foreach($field in $fields)#if($!{foreach.index}>0),#end#{${field.getName()}}#end)
+	</insert>
+	
 </mapper>
